Fix row spacing for sub-fields

--- a/src/web/assets/frontend/src/scss/_variables.scss
+++ b/src/web/assets/frontend/src/scss/_variables.scss
@@ -101,7 +101,7 @@ $focus-shadow: 0 0 0 3px rgba(164, 202, 254, 0.45) !default;
     // --fui-btn-border-radius
 
     // Button Container
-    --fui-btn-container-padding: 0;
+    --fui-btn-container-padding: 1rem 0 0 0;
     --fui-btn-container-margin: 0 -0.5rem 0 -0.5rem;
     --fui-btn-margin: 0 0.5rem 0 0.5rem;
 
