--- a/src/web/assets/frontend/src/scss/forms/_form.scss
+++ b/src/web/assets/frontend/src/scss/forms/_form.scss
@@ -51,7 +51,7 @@
 // ==========================================================================
 
 .fui-row {
-    &:not(.fui-row-empty) {
+    &:not(.fui-row-empty):not(:last-child) {
         margin-bottom: var(--fui-field-gutter);
     }
 }
